--- a/peopleinfo/package.json
+++ b/peopleinfo/package.json
@@ -4,6 +4,7 @@
   "description": "People Information API",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lakshitha Herath",
