--- a/SpringBoot/db-service/src/main/resources/application.properties
+++ b/SpringBoot/db-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name= db-service
 server.port = 8301
 
 # DB related configurations
@@ -6,3 +7,11 @@ spring.datasource.url=jdbc:mysql://localhost/sakila
 spring.datasource.username=root
 spring.datasource.password=pass@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+
+# EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
