--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -10,12 +10,9 @@ pipeline {
     }
     stages {
 
-        stage('Build preparations')
-        {
-            steps
-            {
-                script 
-                {
+        stage('Build preparations'){
+            steps{
+                script {
                     // calculate GIT lastest commit short-hash
                     gitCommitHash = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
                     shortCommitHash = gitCommitHash.take(7)
