--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         VERSION = 'latest'
         PROJECT = 'mynodeapp'
         IMAGE = 'mynodeapp:latest'
-        ECRLOCATION = '36825406282.dkr.ecr.ap-southeast-1.amazonaws.com'
+        ECRLOCATION = '936825406282.dkr.ecr.ap-southeast-1.amazonaws.com'
     }
     stages {
 
@@ -20,7 +20,7 @@ pipeline {
                     VERSION = shortCommitHash
                     // set the build display name
                     currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
-                    IMAGE = "$PROJECT:$VERSION"
+                    IMAGE = "${PROJECT}:${VERSION}"
                 }
             }
         }
