--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                     VERSION = shortCommitHash
                     // set the build display name
                     currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
-                    IMAGE = "${PROJECT}:${VERSION}"
+                    IMAGE = "#${PROJECT}:${VERSION}"
                 }
             }
         }
