--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     {
         VERSION = 'latest'
         PROJECT = 'mynodeapp'
-        IMAGE = 'mynodeapp:latest'
+        // IMAGE = 'mynodeapp:latest'
         ECRLOCATION = '936825406282.dkr.ecr.ap-southeast-1.amazonaws.com'
     }
     stages {
