--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
 
     agent any
 
-    def IMAGE = 'mynodeapp:latest'
-    def VERSION = 'latest'
+    //def IMAGE = 'mynodeapp:latest'
+    //def VERSION = 'latest'
 
     environment 
     {
@@ -25,7 +25,7 @@ pipeline {
                     shortCommitHash = gitCommitHash.take(7)
                     // calculate a sample version tag
                     VERSION = shortCommitHash
-                    IMAGE = 'mynodeapp:latest4'
+                    env.IMAGE = 'mynodeapp:latest4'
                     // set the build display name
                     currentBuild.displayName = "#${BUILD_ID}-${VERSION}" 
                 }
@@ -36,7 +36,7 @@ pipeline {
             steps {
                 echo 'Start Building Dockerfile........'
                 sh 'echo ${VERSION}'
-                sh 'docker build -f ECS/mynodeapp/Dockerfile -t ${IMAGE} ECS/mynodeapp'
+                sh 'docker build -f ECS/mynodeapp/Dockerfile -t ${env.IMAGE} ECS/mynodeapp'
             }
         }
         stage('Tag') {
