--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
                     // set the build display name
                     currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
                     sh 'echo $IMAGE'
-                    sh 'echo $VERSION'
+                    sh 'echo ${VERSION}'
                 }
             }
         }
