--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
                     VERSION = shortCommitHash
                     IMAGE = "$PROJECT:$VERSION"
                     // set the build display name
-                    currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
+                    //currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
                     sh 'echo #${BUILD_ID}-${VERSION}'
                     sh 'echo ${VERSION}'
                 }
