--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -26,10 +26,10 @@ pipeline {
                     shortCommitHash = gitCommitHash.take(7)
                     // calculate a sample version tag
                     VERSION = shortCommitHash
-                    IMAGE = "$PROJECT:$VERSION"
+                    IMAGE = "#$PROJECT:$VERSION"
                     // set the build display name
-                    //currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
-                    sh 'echo #${BUILD_ID}-${VERSION}'
+                    currentBuild.displayName = "#${BUILD_ID}-${VERSION}"
+                    sh 'echo ${IMAGE}'
                     sh 'echo ${VERSION}'
                 }
             }
