--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -51,10 +51,12 @@ pipeline
                 {
                     // login to ECR - for now it seems that that the ECR Jenkins plugin is not performing the login as expected. I hope it will in the future.
                     sh("eval \$(aws ecr get-login --no-include-email --region ap-southeast-1 | sed 's|https://||')")
+
                     // Push the Docker image to ECR
-                    docker.withRegistry(ECRURL, ECRCRED)
+                     docker.image(IMAGE).push()
+                    //docker.withRegistry(ECRURL, ECRCRED)
                     {
-                        docker.image(IMAGE).push()
+                       
                     }
                 }
             }
