--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -53,10 +53,10 @@ pipeline
                     sh("eval \$(aws ecr get-login --no-include-email --region ap-southeast-1 | sed 's|https://||')")
 
                     // Push the Docker image to ECR
-                     docker.image(IMAGE).push()
-                    //docker.withRegistry(ECRURL, ECRCRED)
+                     
+                    docker.withRegistry(ECRURL)
                     {
-                       
+                       docker.image(IMAGE).push()
                     }
                 }
             }
