--- a/ECS/Jenkinsfile
+++ b/ECS/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline
         VERSION = 'latest'
         PROJECT = 'mynodeapp'
         IMAGE = 'mynodeapp:latest'
-        ECRURL = 'http://936825406282.dkr.ecr.ap-southeast-1.amazonaws.com'
+        ECRURL = 'http://XXXXXXXX.dkr.ecr.ap-southeast-1.amazonaws.com'
     }
     stages
     {
