--- a/petproject/gateway/build.gradle
+++ b/petproject/gateway/build.gradle
@@ -6,11 +6,10 @@ plugins {
 }
 
 apply plugin:"application"
-apply plugin:"groovy"
 apply plugin:"java"
 
 version "0.1"
-group "encrypt.service"
+group "gateway"
 
 repositories {
     mavenLocal()
@@ -27,19 +26,14 @@ dependencyManagement {
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-discovery-client"
     compile "io.micronaut:micronaut-http-client"
     compile "io.micronaut:micronaut-http-server-netty"
     compile "io.micronaut:micronaut-inject"
     compile "io.micronaut:micronaut-validation"
-    compile "io.micronaut:micronaut-discovery-client"
     compile "io.micronaut:micronaut-runtime"
-
     compileOnly "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    testCompile("org.spockframework:spock-core") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
-    testCompile "io.micronaut:micronaut-inject-groovy"
     testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
@@ -51,7 +45,7 @@ shadowJar {
 
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
-mainClassName = "encrypt.service.Application"
+mainClassName = "gateway.Application"
 tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
     options.compilerArgs.add('-parameters')
